--- a/SuperAdmin/pages/collegeModal.html
+++ b/SuperAdmin/pages/collegeModal.html
@@ -1,46 +1,25 @@
-<!-- Modal Container -->
-<div id="modal-college"
-     class="hidden fixed inset-0 bg-gray-900 bg-opacity-75 z-50 flex justify-center items-center transition-opacity duration-300 opacity-0">
-    <div class="cf-card w-full max-w-2xl mx-4" onclick="event.stopPropagation()">
+<!-- Add College Modal -->
+<div id="modal-college" 
+     class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center z-50 hidden opacity-0 transition-opacity duration-300">
+  <div class="bg-white rounded-lg shadow-lg p-6 w-full max-w-md">
+    <h2 class="text-lg font-bold mb-4">Add New College</h2>
 
-        <!-- Modal Header -->
-        <div class="flex justify-between items-center border-b pb-4 mb-6">
-            <h3 class="text-2xl font-semibold text-gray-800">Add New College</h3>
-            <button type="button" id="close-college-modal-btn" class="text-gray-400 hover:text-gray-600 transition duration-150">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
-                </svg>
-            </button>
-        </div>
+    <form id="college-form">
+      <div class="mb-3">
+        <label>College Name <span class="text-red-500">*</span></label>
+        <input type="text" id="college_name" name="college_name" required 
+               class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring focus:ring-green-500" 
+               placeholder="e.g., College of Engineering, Architecture & Technology" />
+      </div>
 
-        <!-- Modal Body (College Form) -->
-        <form id="college-form" onsubmit="event.preventDefault(); handleAddCollege();">
-            <div class="space-y-4">
-                <!-- College Name -->
-                <div>
-                    <label for="college_name" class="cf-label required">College Name</label>
-                    <input type="text" id="college_name" class="cf-input"
-                           placeholder="e.g., College of Engineering, Architecture & Technology" required>
-                </div>
-            </div>
-
-            <!-- Modal Footer -->
-            <div class="flex justify-end space-x-3 pt-6 border-t mt-6">
-                <button type="button" id="cancel-college-modal-btn" class="cf-btn-secondary">
-                    Cancel
-                </button>
-                <button type="submit" class="cf-btn-primary flex items-center">
-                    <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                              d="M5 13l4 4L19 7"></path>
-                    </svg>
-                    Save College
-                </button>
-            </div>
-        </form>
-    </div>
+      <div class="flex justify-end space-x-2 mt-4">
+        <button type="button" id="cancel-college-modal-btn"
+                class="px-4 py-2 border border-gray-300 rounded-md hover:bg-gray-50">Cancel</button>
+        <button type="submit"
+                class="px-4 py-2 bg-green-600 text-white rounded-md hover:bg-green-700">Save College</button>
+      </div>
+    </form>
+  </div>
 </div>
 
 <!-- Custom Message Display -->
