--- a/SuperAdmin/pages/materialType.html
+++ b/SuperAdmin/pages/materialType.html
@@ -20,13 +20,12 @@
   <!-- Table -->
   <div class="bg-white rounded-lg shadow overflow-hidden">
     <table class="w-full border-collapse" id="materialTypesTable">
-      <thead class="bg-gray-100 border-b">
-        <tr>
-          <th class="px-4 py-3 text-left text-sm font-semibold text-gray-600">ID</th>
-          <th class="px-4 py-3 text-left text-sm font-semibold text-gray-600">Material Type</th>
-          <th class="px-4 py-3 text-left text-sm font-semibold text-gray-600">Description</th>
-          <th class="px-4 py-3 text-center text-sm font-semibold text-gray-600">Action</th>
-        </tr>
+      <thead>
+        <tr class="bg-gray-100 border-b">
+          <th class="text-left px-4 py-3 text-sm font-semibold text-gray-700 w-1/12">ID</th>
+          <th class="text-left px-4 py-3 text-sm font-semibold text-gray-700 w-3/12">Type Name</th>
+          <th class="text-left px-4 py-3 text-sm font-semibold text-gray-700 w-7/12">Description</th>
+          <th class="text-center px-4 py-3 text-sm font-semibold text-gray-700 w-1/12">Actions</th> </tr>
       </thead>
       <tbody>
         <?php if (!empty($materialTypes)): ?>
@@ -40,12 +39,13 @@
               <td class="px-4 py-3 text-sm"><?= htmlspecialchars($mt["desc"] ?? '—', ENT_QUOTES, 'UTF-8') ?></td>
               <td class="px-4 py-3 text-center">
                 <div class="relative inline-block text-left">
-                  <button type="button" class="w-24 text-center px-3 py-1 bg-gray-200 border border-gray-400 text-sm rounded-md hover:bg-gray-300 focus:outline-none whitespace-nowrap">
+                  <button type="button" class="dropdown-toggle w-24 text-center px-3 py-1 bg-gray-200 border border-gray-400 text-sm rounded-md hover:bg-gray-300 focus:outline-none whitespace-nowrap">
                     Manage ▾
                   </button>
-                  <div class="hidden absolute right-0 mt-1 w-40 bg-white border rounded-md shadow-md z-10">
-                    <a href="#" class="block px-4 py-2 text-sm hover:bg-gray-100">Edit Type</a>
-                    <a href="#" class="block px-4 py-2 text-sm text-red-600 hover:bg-gray-100">Remove Type</a>
+                  <div class="dropdown-menu hidden absolute right-0 mt-1 w-40 bg-white border rounded-md shadow-md z-10">
+                    <a href="#" class="edit-type-btn block px-4 py-2 text-sm hover:bg-gray-100">Edit Type</a>
+                    <a href="#" class="view-type-btn block px-4 py-2 text-sm hover:bg-gray-100">View Type</a>
+                    <a href="#" class="delete-type-btn block px-4 py-2 text-sm text-red-600 hover:bg-gray-100">Remove Type</a>
                   </div>
                 </div>
               </td>
@@ -89,5 +89,9 @@
     </form>
   </div>
 </div>
+
+<!-- Include modals -->
+<?php include 'update_material_type_modal.php'; ?>
+<?php include 'delete_material_type_modal.php'; ?>
 
 <script src="pages/materialType.js"></script>
