--- a/SuperAdmin/pages/users.html
+++ b/SuperAdmin/pages/users.html
@@ -1,13 +1,9 @@
-<!-- users.html -->
 <div id="users" class="p-6">
-  <!-- Header Card -->
   <div class="bg-white border rounded-lg p-4 mb-6 shadow-sm">
     <div class="flex flex-col sm:flex-row sm:items-center gap-3">
-      <!-- Search -->
       <input type="text" id="searchUser" placeholder="Search"
              class="flex-grow px-4 py-2 border rounded-md text-sm focus:ring focus:ring-green-500 focus:outline-none">
 
-      <!-- Course Filter -->
       <select id="courseFilter" class="px-3 py-2 border rounded-md text-sm focus:ring focus:ring-green-500 focus:outline-none">
         <option value="">All Courses</option>
         <?php foreach ($courses as $course): ?>
@@ -15,7 +11,6 @@
         <?php endforeach; ?>
       </select>
 
-      <!-- Role Filter -->
       <select id="roleFilter" class="px-3 py-2 border rounded-md text-sm focus:ring focus:ring-green-500 focus:outline-none">
         <option value="">All Roles</option>
         <?php foreach ($roles as $role): ?>
@@ -23,7 +18,6 @@
         <?php endforeach; ?>
       </select>
 
-      <!-- Year Filter -->
       <select id="yearFilter" class="px-3 py-2 border rounded-md text-sm focus:ring focus:ring-green-500 focus:outline-none">
         <option value="">All Year Levels</option>
         <?php foreach ($years as $y): ?>
@@ -31,7 +25,6 @@
         <?php endforeach; ?>
       </select>
 
-      <!-- Add User Button -->
       <button id="openAddUser"
               class="flex items-center px-4 py-2 bg-green-600 text-white text-sm rounded-md hover:bg-green-700 whitespace-nowrap">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
@@ -43,7 +36,6 @@
     </div>
   </div>
 
-  <!-- Users Table -->
   <div class="bg-white rounded-lg shadow overflow-hidden">
     <table class="w-full border-collapse" id="usersTable">
       <thead class="bg-gray-100 border-b">
@@ -61,12 +53,12 @@
         <?php if (!empty($users)): ?>
           <?php foreach ($users as $u): ?>
             <tr class="border-b hover:bg-gray-50"
-                data-first="<?= htmlspecialchars(strtolower($u['firstName'])) ?>"
-                data-middle="<?= htmlspecialchars(strtolower($u['middleName'] ?? '')) ?>"
-                data-last="<?= htmlspecialchars(strtolower($u['lastName'])) ?>"
-                data-course="<?= htmlspecialchars(strtolower($u['course'] ?? '')) ?>"
-                data-role="<?= htmlspecialchars(strtolower($u['role'] ?? '')) ?>"
-                data-year="<?= htmlspecialchars($u['yearLevel'] ?? '') ?>">
+                    data-user-id="<?= htmlspecialchars($u['user_id']) ?>" data-first="<?= htmlspecialchars(strtolower($u['firstName'])) ?>"
+                    data-middle="<?= htmlspecialchars(strtolower($u['middleName'] ?? '')) ?>"
+                    data-last="<?= htmlspecialchars(strtolower($u['lastName'])) ?>"
+                    data-course="<?= htmlspecialchars(strtolower($u['course'] ?? '')) ?>"
+                    data-role="<?= htmlspecialchars(strtolower($u['role'] ?? '')) ?>"
+                    data-year="<?= htmlspecialchars($u['yearLevel'] ?? '') ?>">
               <td class="px-4 py-3 text-sm"><?= htmlspecialchars($u['firstName']) ?></td>
               <td class="px-4 py-3 text-sm"><?= htmlspecialchars($u['middleName'] ?? '') ?></td>
               <td class="px-4 py-3 text-sm"><?= htmlspecialchars($u['lastName']) ?></td>
@@ -77,10 +69,10 @@
                 <div class="relative inline-block text-left">
                   <button class="w-24 text-center px-3 py-1 bg-gray-200 border border-gray-400 text-sm rounded-md hover:bg-gray-300 focus:outline-none whitespace-nowrap">Manage ▾</button>
                   <div class="hidden absolute right-0 mt-1 w-40 bg-white border rounded-md shadow-md z-10">
-                    <a href="#" class="block px-4 py-2 text-sm hover:bg-gray-100">Update Account</a>
-                    <a href="#" class="block px-4 py-2 text-sm hover:bg-gray-100">Edit Username</a>
-                    <a href="#" class="block px-4 py-2 text-sm hover:bg-gray-100">Edit Password</a>
-                    <a href="#" class="block px-4 py-2 text-sm text-red-600 hover:bg-gray-100">Remove Account</a>
+                    <a href="#view" class="block px-4 py-2 text-sm hover:bg-gray-100">View User</a>
+                    <a href="#edit" class="block px-4 py-2 text-sm hover:bg-gray-100">Edit User</a>
+                    <a href="#delete" class="block px-4 py-2 text-sm text-red-600 hover:bg-gray-100">Delete User</a>
+          
                   </div>
                 </div>
               </td>
