--- a/SuperAdmin/pages/materialType.html
+++ b/SuperAdmin/pages/materialType.html
@@ -25,13 +25,14 @@
           <th class="text-left px-4 py-3 text-sm font-semibold text-gray-700 w-1/12">ID</th>
           <th class="text-left px-4 py-3 text-sm font-semibold text-gray-700 w-3/12">Type Name</th>
           <th class="text-left px-4 py-3 text-sm font-semibold text-gray-700 w-7/12">Description</th>
-          <th class="text-center px-4 py-3 text-sm font-semibold text-gray-700 w-1/12">Actions</th> </tr>
+          <th class="text-center px-4 py-3 text-sm font-semibold text-gray-700 w-1/12">Actions</th>
+        </tr>
       </thead>
       <tbody>
         <?php if (!empty($materialTypes)): ?>
           <?php foreach ($materialTypes as $mt): ?>
             <tr class="border-b hover:bg-gray-50"
-                data-id="<?= htmlspecialchars(strtolower($mt['id'] ?? ''), ENT_QUOTES, 'UTF-8') ?>"
+                data-id="<?= htmlspecialchars($mt['id'] ?? '', ENT_QUOTES, 'UTF-8') ?>"
                 data-name="<?= htmlspecialchars(strtolower($mt['name'] ?? ''), ENT_QUOTES, 'UTF-8') ?>"
                 data-desc="<?= htmlspecialchars(strtolower($mt['desc'] ?? ''), ENT_QUOTES, 'UTF-8') ?>">
               <td class="px-4 py-3 text-sm"><?= htmlspecialchars($mt["id"] ?? '—', ENT_QUOTES, 'UTF-8') ?></td>
@@ -52,7 +53,7 @@
             </tr>
           <?php endforeach; ?>
         <?php else: ?>
-          <tr><td colspan="4" class="px-4 py-3 text-center text-gray-500">No material types found.</td></tr>
+          <tr id="noDataRow"><td colspan="4" class="px-4 py-3 text-center text-gray-500">No material types found.</td></tr>
         <?php endif; ?>
       </tbody>
     </table>
@@ -61,7 +62,7 @@
 
 <!-- Add Material Type Modal -->
 <div id="addMaterialTypeModal" 
-     class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center z-50 hidden opacity-0 transition-opacity duration-300">
+     class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center z-50 hidden transition-opacity duration-300">
   <div class="bg-white rounded-lg shadow-lg p-6 w-full max-w-md">
     <h2 class="text-lg font-bold mb-4">Add Material Type</h2>
 
