--- a/ethanTwo/index.html
+++ b/ethanTwo/index.html
@@ -6,7 +6,7 @@
 <title>Login to Your Account</title>
 <link rel="stylesheet" href ="index.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-<script src="loginOne.js"></script>
+<script src="index.js"></script>
 </head>
   <body>
     <?php include __DIR__ . '/sidebar.php'; ?>
