--- a/ethanTwo/pages/role.html
+++ b/ethanTwo/pages/role.html
@@ -61,9 +61,9 @@
                   Manage ▾
                 </button>
                 <div class="dropdown-menu hidden absolute right-0 mt-1 w-40 bg-white border rounded-md shadow-md z-10">
-                  <a href="#" class="block px-4 py-2 text-sm hover:bg-gray-100 view-role-btn">View Role</a>
-                  <a href="#" class="block px-4 py-2 text-sm hover:bg-gray-100 edit-role-btn">Update Role</a>
-                  <a href="#" class="block px-4 py-2 text-sm text-red-600 hover:bg-gray-100 delete-role-btn">Delete Role</a>
+                  <a href="#" class="block px-4 py-2 text-sm hover:bg-gray-100 view-role-btn border-b border-gray-200 ">View Role</a>
+                  <a href="#" class="block px-4 py-2 text-sm hover:bg-gray-100 edit-role-btn border-b border-gray-200 ">Update Role</a>
+                  <a href="#" class="block px-4 py-2 text-sm text-red-600 hover:bg-gray-100 delete-role-btn border-b border-gray-200 ">Delete Role</a>
                 </div>
               </div>
             </td>
