--- a/ethanTwo/pages/college.html
+++ b/ethanTwo/pages/college.html
@@ -38,13 +38,13 @@
                 Manage ▾
               </button>
               <div class="manage-dropdown hidden absolute w-40 bg-white border rounded-md shadow-md z-50" style="min-width: 160px;">
-                <a href="#" class="block px-4 py-2 text-sm hover:bg-gray-100 view-college-btn"
+                <a href="#" class="block px-4 py-2 text-sm hover:bg-gray-100 view-college-btn border-b border-gray-200 "
                    data-college-id="<?= htmlspecialchars($c['id']) ?>"
                    data-college-name="<?= htmlspecialchars($c['name']) ?>">View College</a>
-                <a href="#" class="block px-4 py-2 text-sm hover:bg-gray-100 edit-college-btn"
+                <a href="#" class="block px-4 py-2 text-sm hover:bg-gray-100 edit-college-btn border-b border-gray-200 "
                    data-college-id="<?= htmlspecialchars($c['id']) ?>"
                    data-college-name="<?= htmlspecialchars($c['name']) ?>">Update College</a>
-                <a href="#" class="block px-4 py-2 text-sm text-red-600 hover:bg-gray-100 delete-college-btn"
+                <a href="#" class="block px-4 py-2 text-sm text-red-600 hover:bg-gray-100 delete-college-btn border-b border-gray-200 "
                    data-college-id="<?= htmlspecialchars($c['id']) ?>"
                    data-college-name="<?= htmlspecialchars($c['name']) ?>">Delete College</a>
               </div>
