--- a/ethanTwo/pages/course.html
+++ b/ethanTwo/pages/course.html
@@ -62,13 +62,13 @@
                     Manage ▾
                   </button>
                   <div class="manage-dropdown hidden absolute right-0 mt-1 w-40 bg-white border rounded-md shadow-md z-10">
-                    <a href="#" class="block px-4 py-2 text-sm hover:bg-gray-100 view-course-btn"
+                    <a href="#" class="block px-4 py-2 text-sm hover:bg-gray-100 view-course-btn border-b border-gray-200 "
                        data-course-id="<?= htmlspecialchars($c['id'] ?? '', ENT_QUOTES, 'UTF-8') ?>"
                        data-course-name="<?= htmlspecialchars($c['name'] ?? '', ENT_QUOTES, 'UTF-8') ?>">View Course</a>
-                    <a href="#" class="block px-4 py-2 text-sm hover:bg-gray-100 edit-course-btn"
+                    <a href="#" class="block px-4 py-2 text-sm hover:bg-gray-100 edit-course-btn border-b border-gray-200 "
                        data-course-id="<?= htmlspecialchars($c['id'] ?? '', ENT_QUOTES, 'UTF-8') ?>"
                        data-course-name="<?= htmlspecialchars($c['name'] ?? '', ENT_QUOTES, 'UTF-8') ?>">Update Course</a>
-                    <a href="#" class="block px-4 py-2 text-sm text-red-600 hover:bg-gray-100 delete-course-btn"
+                    <a href="#" class="block px-4 py-2 text-sm text-red-600 hover:bg-gray-100 delete-course-btn border-b border-gray-200 "
                        data-course-id="<?= htmlspecialchars($c['id'] ?? '', ENT_QUOTES, 'UTF-8') ?>"
                        data-course-name="<?= htmlspecialchars($c['name'] ?? '', ENT_QUOTES, 'UTF-8') ?>">Delete Course</a>
                   </div>
