--- a/ethanTwo/pages/librarianColleges.html
+++ b/ethanTwo/pages/librarianColleges.html
@@ -53,7 +53,7 @@
               </svg>
             </div>
             <p class="text-green-700 font-bold text-base"><?= $c["approved"] ?></p>
-            <p class="text-gray-600">Dean Approved</p>
+            <p class="text-gray-600">Dean Approved Materials</p>
           </div>
           <div class="p-3 bg-yellow-50 border border-yellow-100 rounded-lg text-center transition-transform hover:scale-105">
             <div class="flex justify-center mb-1">
