--- a/registrationOne.html
+++ b/registrationOne.html
@@ -93,7 +93,7 @@
       </button>
       <div class="text-center text-xs text-gray-600">
         Already have an account? 
-        <a href="loginOne.html" class="text-green-600 hover:underline">Login</a>
+        <a href="index.html" class="text-green-600 hover:underline">Login</a>
       </div>
     </form>
   </div>
