--- a/index.html
+++ b/index.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><?php echo $pageTitle; ?></title>
-    <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.5/dist/cdn.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@alpinejs/collapse@3.13.5/dist/cdn.min.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="/SuperAdmin/style.css">
-    
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Login to Your Account</title>
+<script src="https://cdn.tailwindcss.com"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
-<body class="flex min-h-screen text-gray-800">
-    <?php include __DIR__ . '/sidebar.php'; ?>
-    <?php include __DIR__ . '/pages/collegeModal.html'; ?>
+<body class="bg-gray-100 flex justify-center items-center min-h-screen p-4">
+  <div class="bg-white p-6 rounded-lg shadow-md w-full max-w-md">
+    <h2 class="text-xl font-bold text-center mb-4">Login to Your Account</h2>
+
 
     
-    <!-- Main -->
-    <main class="flex-1 flex flex-col">
-        <?php include __DIR__ . '/header.php'; ?>
-        <div class="p-6">
-            <?php include $contentFile; ?>
-        </div>
-    </main>
+    <!-- Login Form -->
+    <form action="" name="login" id="loginForm">
+      <div id="error" class="text-red-500 text-xs mb-3 text-center font-medium bg-red-50 p-2 rounded border border-red-200 hidden"></div>              <input type="text" id="username" name="username" placeholder="Enter your username" 
+               class="w-full px-3 py-2 border border-gray-300 rounded text-sm focus:ring-2 focus:ring-green-500 focus:outline-none mb-3" required>
 
-    <!-- Scripts -->
-    <script src="app.js"></script>
-    <?php include __DIR__ . '/pages/add_role_modal.php'; ?>
-    <?php include __DIR__ . '/pages/add_user_modal.html'; ?>
-    <?php include __DIR__ . '/pages/manage_user_modal.html'?>
-    <?php include __DIR__ . '/pages/add_material_type.html'?>
-    <?php include __DIR__ . '/pages/delete_user_modal.html'?>
-    <?php include __DIR__ . '/pages/add_course_modal.php'; ?>
-    <?php include __DIR__ . '/pages/update_role_modal.php'?>
-    <?php include __DIR__ . '/pages/delete_role_modal.php'?>
-    <?php include __DIR__ . '/pages/update_material_type_modal.php'; ?>
-    <?php include __DIR__ . '/pages/delete_material_type_modal.php'; ?>
-    <?php include __DIR__ . '/pages/editCollegeModal.html'; ?>
-    <?php include __DIR__ . '/pages/deleteCollegeModal.html'; ?>
-    <?php include __DIR__ . '/pages/edit_course_modal.php';?>
-    <?php include __DIR__ . '/pages/delete_course_modal.php'; ?>
+        <label for="password" class="block font-medium text-gray-700 mb-1 text-sm">Password</label>
+        <input type="password" id="password" name="password" placeholder="Enter your password" 
+               class="w-full px-3 py-2 border border-gray-300 rounded text-sm focus:ring-2 focus:ring-green-500 focus:outline-none mb-3" required>
+
+        <div class="flex items-center mb-3">
+          <input type="checkbox" id="show-pass" class="w-4 h-4 mr-2">
+          <label for="show-pass" class="text-xs">Show password</label>
+        </div>
+
+
+        <button type="submit" id="btn-submit" 
+                class="w-full py-2 bg-green-700 text-white rounded font-medium hover:bg-green-800 transition duration-200 mb-3 text-sm">
+          Login
+        </button>
+        <div class="text-center text-xs text-gray-600">
+          Don't have an account? <a href="registration.php" class="text-green-600 hover:underline">Register</a>
+        </div>
+    </form>
+  </div>
+
+  <script src="index.js"></script>
 </body>
 </html>
